# pdns

./: README.md  configure.ac
m4/: pdns_check_grpc.m4
modules/grpcbackend/: Makefile.am  OBJECTFILES  OBJECTLIBS  grpcbackend.cc  grpcbackend.hh  pdns_backend.grpc.pb.cc  pdns_backend.grpc.pb.h  pdns_backend.pb.cc  pdns_backend.pb.h  pdns_backend.proto
pdns/: tcpreceiver.cc  ueberbackend.cc
